Revision history for Net-Amazon-DynamoDB-Marshaler

{{$NEXT}}

0.03  2017-07-20 23:15:29 UTC
        - Handle numbers that are out-of-bounds for DynamoDB

0.02  2017-07-20 17:36:50 UTC
        - Handle empty strings correctly
        - Setup Docker development framework

0.01  2017-07-11 13:56:03 PDT
        - Initial release